objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Aim__c</fullName>
        <label>Campaign Aim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Details__c</fullName>
        <label>Campaign Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Key_Achievements__c</fullName>
        <inlineHelpText>e.g. What was their campaign action; How many people signed a petition.</inlineHelpText>
        <label>Campaign Key Achievements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Rating__c</fullName>
        <inlineHelpText>1 = Low, 5 - High.</inlineHelpText>
        <label>Campaign Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connecting</fullName>
                </value>
                <value>
                    <fullName>Petitioning</fullName>
                </value>
                <value>
                    <fullName>Educating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>Wave__r.Wave_Cluster__r.Name</formula>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communicable_Problem__c</fullName>
        <inlineHelpText>Is there a easily communicable problem that they seek to address?</inlineHelpText>
        <label>RCA Partner: Communicable Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Arrival_time_at_RA__c</fullName>
        <label>Day 1 Arrival time at RA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Day_1_Arrival_time_at_TC_CP_venue__c</fullName>
        <label>Day 1 Arrival time at TC CP venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Arrival_time_at_TC_venue__c</fullName>
        <inlineHelpText>Only complete if returning from TC venue</inlineHelpText>
        <label>Day 1 Arrival time at TC venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Depart_time_from_TC_CP_venue__c</fullName>
        <label>Day 1 Depart time from TC CP venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Depart_time_from_TC_venue__c</fullName>
        <label>Day 1 Depart time from TC venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Depart_time_to_RA__c</fullName>
        <inlineHelpText>Please complete regardless of where you are coming from.</inlineHelpText>
        <label>Day 1 Depart time to RA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Return_to_TC_venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day 1 Return to TC venue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_2_Arrival_time_at_RA__c</fullName>
        <inlineHelpText>Please complete regardless of where you are coming from.</inlineHelpText>
        <label>Day 2 Arrival time at RA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Arrival_time_at_TC_CP_venue__c</fullName>
        <label>Day 2 Arrival time at TC CP venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Arrival_time_at_TC_venue__c</fullName>
        <inlineHelpText>only complete if returning from TC venue</inlineHelpText>
        <label>Day 2 Arrival time at TC venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Depart_time_from_TC_CP_venue__c</fullName>
        <label>Day 2 Depart time from TC CP venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Depart_time_from_TC_venue__c</fullName>
        <label>Day 2 Depart time from TC venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Depart_time_to_RA__c</fullName>
        <inlineHelpText>Only complete if returning from TC venue</inlineHelpText>
        <label>Day 2 Depart time to RA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_2_Return_to_TC_venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day 2 Return to TC venue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_they_turn_up__c</fullName>
        <label>Did they turn up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fundraising_Total__c</fullName>
        <label>Fundraising Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_there_a_2nd_TC_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there a 2nd TC Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_team_name__c</fullName>
        <label>Long team name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Media Coverage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minibus_to_Partner_Challenge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you getting a minibus to the Partner Challenge?</description>
        <label>Minibus to Partner Challenge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCST_target_participants__c</fullName>
        <description>Data manually entered based on wave size and as per last upload to NCST. Data needs to be changed if wave size changes. The NCST system does not allow for decimal places so numbers are rounded up.</description>
        <inlineHelpText>Data manually entered based on wave size and as per last upload to NCST. Data needs to be changed if wave size changes. The NCST system does not allow for decimal places so numbers are rounded up.</inlineHelpText>
        <label>NCST target participants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCST_team_id__c</fullName>
        <description>NCST team id used as external id on the NCST CRM system. Manually entered rather than calculated.</description>
        <inlineHelpText>NCST team id used as external id on the NCST CRM system. Manually entered rather than calculated.</inlineHelpText>
        <label>NCST team id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_zone__c</fullName>
        <description>Formula pulling &apos;NCS zone&apos; from Wave</description>
        <formula>Wave__r.NCSZone__c</formula>
        <inlineHelpText>Formula pulling &apos;NCS zone&apos; from Wave</inlineHelpText>
        <label>NCS zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Check__c</fullName>
        <formula>IF( OR( Wave__r.Wave_Cluster__r.PM__c = $User.Id , 
Wave__r.Wave_Cluster__r.PM__c = $User.ManagerId ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <description>Definition of the partner organization</description>
        <inlineHelpText>Please choose the category which best fits the partner organization.</inlineHelpText>
        <label>Partner Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol/Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s and Youth Service</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>Disability Services</fullName>
                </value>
                <value>
                    <fullName>Elderly Care</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food Bank</fullName>
                </value>
                <value>
                    <fullName>Homelessness</fullName>
                </value>
                <value>
                    <fullName>Intergenerational</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_CAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential CAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_1_3_Formula__c</fullName>
        <formula>IF( ISPICKVAL(RCA_1_3__c, &quot;Saturday&quot;) , &quot;Teams meeting on &quot;&amp;TEXT(RCA_1_3__c)&amp;&quot; 6, 13 and 20 September&quot;, &quot;Teams meeting on &quot;&amp;TEXT(RCA_1_3__c)&amp;&quot; 7, 14 and 21 September&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA 1-3 Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_1_3__c</fullName>
        <description>Day that RCA days 1-3 fall on</description>
        <inlineHelpText>Day that RCA days 1-3 fall on</inlineHelpText>
        <label>RCA 1-3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_1_day_date__c</fullName>
        <formula>IF(ISPICKVAL( RCA_1_3__c , &quot;Saturday&quot;),  DATE(2012,11,24) ,  DATE(2012,11,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA day 1 date.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_4_Meeting_Point__c</fullName>
        <description>Field used for the Big Challenge Address.  In summer 2012 this was populated by mass upload.</description>
        <label>RCA 4 Meeting Point</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_4__c</fullName>
        <description>Day that RCA 4 falls on</description>
        <inlineHelpText>Day that RCA 4 falls on</inlineHelpText>
        <label>RCA 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_4_day_date__c</fullName>
        <formula>IF(ISPICKVAL( RCA_4__c  , &quot;Saturday&quot;),  DATE(2012,12,15) ,  DATE(2012,12,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA day 4 date.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_Partner_Challenge_Visit_date__c</fullName>
        <label>RCA Partner Challenge Visit date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA__c</fullName>
        <label>RCA 1-3 Meeting Point</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RCA_day_1_date_2013__c</fullName>
        <label>RCA day 1 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_day_2_date_2013__c</fullName>
        <label>RCA day 2 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_day_2_date__c</fullName>
        <formula>IF(ISPICKVAL( RCA_1_3__c , &quot;Saturday&quot;),  DATE(2012,12,01) ,  DATE(2012,12,02))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA day 2 date.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_day_3_date_2013__c</fullName>
        <label>RCA day 3 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCA_day_3_date__c</fullName>
        <formula>IF(ISPICKVAL( RCA_1_3__c , &quot;Saturday&quot;),  DATE(2012,12,08) ,  DATE(2012,12,09))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA day 3 date.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Action_Day_Key_Achievements__c</fullName>
        <inlineHelpText>e.g., What tasks did they complete; Who did they work with.</inlineHelpText>
        <label>Social Action Day Key Achievements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Socially_Beneficial__c</fullName>
        <inlineHelpText>What does the partner do that is socially beneficial?</inlineHelpText>
        <label>RCA Partner: Socially Beneficial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Preparedness__c</fullName>
        <inlineHelpText>1 = Low, 5 - High.</inlineHelpText>
        <label>Team Preparedness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>IF(CONTAINS( Name , &quot;Edwards&quot;) , &quot;Edwards&quot;,  IF( CONTAINS(Name, &quot;Perham&quot;) , &quot;Perham&quot;,  IF( CONTAINS(Name, &quot;Ward&quot;) , &quot;Ward&quot;,  IF( CONTAINS(Name, &quot;Reiss&quot;) , &quot;Reiss&quot;,   IF( CONTAINS(Name, &quot;Sabesan&quot;) , &quot;Sabesan&quot;, IF( CONTAINS(Name, &quot;Summerfield&quot;) , &quot;Summerfield&quot;, &quot;Jackman&quot;) ) ) ) ))</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_code__c</fullName>
        <label>Team code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_unsuitable_for__c</fullName>
        <description>YP the team is unsuitable for</description>
        <inlineHelpText>Who should not be assigned to this team? E.g. wheelchair users</inlineHelpText>
        <label>Team unsuitable for</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Theme of the Team</description>
        <label>Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_Number__c</fullName>
        <formula>Wave__r.Wave_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wheelchair_User_for_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheelchair User for Transport</label>
        <type>Checkbox</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>lewisham c su 6</value>
        </filters>
        <label>Reading A 13b</label>
    </listViews>
    <listViews>
        <fullName>BBG_10_RCS_Dates</fullName>
        <columns>NAME</columns>
        <columns>RCA_1_3__c</columns>
        <columns>RCA_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>BBG 10</value>
        </filters>
        <label>BBG 10 RCS Dates</label>
        <sharedTo>
            <group>MarketingSouthLondonSurrey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BBG_10_RCS_Dates1</fullName>
        <columns>NAME</columns>
        <columns>RCA_1_3__c</columns>
        <columns>RCA_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>BB A 6</value>
        </filters>
        <label>BBG 10 RCS Dates</label>
        <sharedTo>
            <group>MarketingSouthLondonSurrey</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BCHIC_A_1_2014_MKTG_Sept_Weekend_dates</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <columns>RCA_1_3__c</columns>
        <columns>RCA_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>BCHIC A 1</value>
        </filters>
        <label>BCHIC A 1 2014 MKTG Sept Weekend dates</label>
        <sharedTo>
            <group>MarketingAll</group>
            <group>MarketingLondon</group>
            <group>MarketingMidlands</group>
            <group>MarketingNorthEastLondon</group>
            <group>MarketingNorthWest</group>
            <group>MarketingSouthLondonSurrey</group>
            <group>MarketingWestLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BCHIC_B_4_Sept_Weekend_dates</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <columns>RCA_1_3__c</columns>
        <columns>RCA_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>BCHIC B 4</value>
        </filters>
        <label>BCHIC B 4 Sept Weekend dates</label>
        <sharedTo>
            <group>MarketingAll</group>
            <group>MarketingLondon</group>
            <group>MarketingMidlands</group>
            <group>MarketingNorthEastLondon</group>
            <group>MarketingNorthWest</group>
            <group>MarketingSouthLondonSurrey</group>
            <group>MarketingWestLondon</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC_Havering_B_Su_1_Teams</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Havering B Su 1</value>
        </filters>
        <label>BC Havering B Su 1 - Teams</label>
    </listViews>
    <listViews>
        <fullName>Barking_A_13_Teams</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <columns>RCA_1_3__c</columns>
        <columns>RCA_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Barking A 13</value>
        </filters>
        <label>Barking A 13 Teams</label>
    </listViews>
    <listViews>
        <fullName>Barnet_2015_A_3_Sales_Teams</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Barnet A 3</value>
        </filters>
        <label>Barnet 2015 A 3 Sales Teams</label>
    </listViews>
    <listViews>
        <fullName>Birmingham_Duplicate_Teams</fullName>
        <columns>Team__c</columns>
        <columns>Cluster__c</columns>
        <columns>Wave_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>Bir</value>
        </filters>
        <label>Birmingham Duplicate Teams</label>
    </listViews>
    <listViews>
        <fullName>Bradford_A_Su_5_TEAMS</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Bradford A Su 2</value>
        </filters>
        <label>Bradford A Su 5 TEAMS</label>
    </listViews>
    <listViews>
        <fullName>Bradford_B_S_U_3</fullName>
        <columns>NAME</columns>
        <columns>Wave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>contains</operation>
            <value>Bradford B SU 3</value>
        </filters>
        <label>Bradford B S U 3</label>
    </listViews>
    <listViews>
        <fullName>Brendans_Allocation</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Tameside B Su 8</value>
        </filters>
        <label>Brendans Allocation</label>
    </listViews>
    <listViews>
        <fullName>CAB_2015_Sales_Teams_Camden_B5</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Camden B 5</value>
        </filters>
        <label>CAB 2015 Sales Teams Camden B5</label>
    </listViews>
    <listViews>
        <fullName>CAB_2015_Teams</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>Brent A 8</value>
        </filters>
        <label>CAB 2015 Teams</label>
    </listViews>
    <listViews>
        <fullName>Cat_G_teams_South_B_wave_1</fullName>
        <columns>NAME</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wave__c</field>
            <operation>equals</operation>
            <value>South Birmingham B Su 1</value>
        </filters>
        <label>Cat G teams South B wave 1</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <recordTypes>
        <fullName>X2012</fullName>
        <active>true</active>
        <description>2012 teams</description>
        <label>2012</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2012A</fullName>
        <active>true</active>
        <description>2012 Autumn teams</description>
        <label>2012A</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <description>2013 Teams</description>
        <label>2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2014</fullName>
        <active>true</active>
        <label>2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2015</fullName>
        <active>true</active>
        <label>2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2016</fullName>
        <active>true</active>
        <label>2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2017</fullName>
        <active>true</active>
        <description>Teams for 2017</description>
        <label>2017</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>